--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,3 +25,8 @@ jobs:
 
       - name: Docker Metadata action
         uses: docker/metadata-action@v3.6.2
+        with:
+          images: name/gannaramu
+          tags: |
+              type=semver,pattern={{version}}
+              type=semver,pattern={{major}}.{{minor}}
